# software-rasterizer

./: CMakeLists.txt  LICENSE  README.md  main.cpp
code/: defs.h  main.cpp  surface.h
code/math/: vector2d.h  vector3d.h
